--- a/TweetApp/Properties/launchSettings.json
+++ b/TweetApp/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "users",
+      "launchUrl": "api/v1.0/users",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "TweetApp": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "users",
+      "launchUrl": "api/v1.0/users",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
