--- a/TweetApp/Properties/launchSettings.json
+++ b/TweetApp/Properties/launchSettings.json
@@ -1,5 +1,4 @@
-﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -8,23 +7,25 @@
       "sslPort": 44372
     }
   },
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/v1.0/users",
+      "launchUrl": "api/v1.0/users/all",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "sqlDebugging": false
     },
     "TweetApp": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/v1.0/users",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchUrl": "api/v1.0/users/all",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
