--- a/TweetApp/appsettings.json
+++ b/TweetApp/appsettings.json
@@ -7,7 +7,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAB-63751578133;Initial Catalog=tweetapp1;Integrated Security=True"
+  "TweetAppDatabaseSettings": {
+    "UsersCollectionName": "Users",
+    "ConnectionString": "mongodb://127.0.0.1:27017/?gssapiServiceName=mongodb",
+    "DatabaseName": "tweetapp"
   }
 }
