Tweet Document Connected

--- a/TweetApp/appsettings.json
+++ b/TweetApp/appsettings.json
@@ -7,16 +7,10 @@
     }
   },
   "AllowedHosts": "*",
-  "TweetAppDatabaseSettings": [
-    {
-      "UsersCollectionName": "Users",
-      "ConnectionString": "mongodb://127.0.0.1:27017/?gssapiServiceName=mongodb",
-      "DatabaseName": "tweetapp"
-    },
-    {
-      "TweetsCollectionName": "tweets",
-      "ConnectionString": "mongodb://127.0.0.1:27017/?gssapiServiceName=mongodb",
-      "DatabaseName": "tweetapp"
-    }
-  ]
+  "TweetAppDatabaseSettings": {
+    "UsersCollectionName": "Users",
+    "TweetsCollectionName": "tweets",
+    "ConnectionString": "mongodb://127.0.0.1:27017/?gssapiServiceName=mongodb",
+    "DatabaseName": "tweetapp"
+  }
 }
