--- a/TweetApp/appsettings.json
+++ b/TweetApp/appsettings.json
@@ -10,6 +10,7 @@
   "TweetAppDatabaseSettings": {
     "UsersCollectionName": "Users",
     "TweetsCollectionName": "tweets",
+    "LikesCollectionName": "Likes",
     "ConnectionString": "mongodb://127.0.0.1:27017/?gssapiServiceName=mongodb",
     "DatabaseName": "tweetapp"
   }
