--- a/TweetApp/TweetApp.csproj
+++ b/TweetApp/TweetApp.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Services\**" />
+    <Content Remove="Services\**" />
+    <EmbeddedResource Remove="Services\**" />
+    <None Remove="Services\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Entities\TweetLike.cs~RF5ca5c6.TMP" />
   </ItemGroup>
 
