--- a/TweetApp/Properties/launchSettings.json
+++ b/TweetApp/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:50102",
-      "sslPort": 44372
+      "sslPort": 443
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
@@ -25,7 +25,14 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      //"applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "http://localhost:80"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/api/v1.0/users/all",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
