--- a/TweetApp/Properties/launchSettings.json
+++ b/TweetApp/Properties/launchSettings.json
@@ -25,11 +25,12 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      //"applicationUrl": "https://localhost:5001;http://localhost:5000"
-      "applicationUrl": "http://localhost:80"
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      //"applicationUrl": "http://localhost:80"
     },
     "Docker": {
       "commandName": "Docker",
+      "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/api/v1.0/users/all",
       "publishAllPorts": true,
       "useSSL": true
