--- a/TweetApp/TweetApp.csproj
+++ b/TweetApp/TweetApp.csproj
@@ -19,6 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="App.Metrics.AspNetCore" Version="4.2.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Endpoints" Version="4.2.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Tracking" Version="4.2.0" />
+    <PackageReference Include="App.Metrics.Formatters.Prometheus" Version="4.2.0" />
     <PackageReference Include="Confluent.Kafka" Version="1.6.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.15" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
