--- a/TweetApp/appsettings.Development.json
+++ b/TweetApp/appsettings.Development.json
@@ -5,5 +5,13 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "TweetAppDatabaseSettings": {
+    "UsersCollectionName": "Users",
+    "TweetsCollectionName": "tweets",
+    "LikesCollectionName": "Likes",
+    "ConnectionString": "mongodb://127.0.0.1:27017/?gssapiServiceName=mongodb",
+    "DatabaseName": "tweetapp"
   }
 }
