--- a/TweetApp/Dockerfile
+++ b/TweetApp/Dockerfile
@@ -13,5 +13,6 @@ RUN dotnet publish -c Release -o out
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:3.1
 WORKDIR /app
+EXPOSE 80
 COPY --from=build-env /app/out .
-ENTRYPOINT ["dotnet", "tweetapp.dll"]
+ENTRYPOINT ["dotnet", "TweetApp.dll"]
