--- a/TweetApp/appsettings.json
+++ b/TweetApp/appsettings.json
@@ -11,7 +11,7 @@
     "UsersCollectionName": "Users",
     "TweetsCollectionName": "tweets",
     "LikesCollectionName": "Likes",
-    "ConnectionString": "mongodb://127.0.0.1:27017/?gssapiServiceName=mongodb",
+    "ConnectionString": "mongodb://mongo:27017",
     "DatabaseName": "tweetapp"
   }
 }
