--- a/TweetApp/docker-compose.yml
+++ b/TweetApp/docker-compose.yml
@@ -1,24 +1,48 @@
+# services:
+#     mongo:
+#         image: mongo
+#         restart: always
+        
+#         ports:
+#           - 80:27017
+#     mongo-express:
+#         image: mongo-express
+#         restart: always
+#         ports:
+#           - 8081:8081
+        
+#         depends_on:
+#           - mongo
+#     tweetapp-server:
+#         build: .
+#         restart: always
+#         ports:
+#           - 8000:80
+#         environment:
+#           MongoDB__Host: mongo
+#         depends_on:
+#           - mongo
 services:
-    mongo:
-        image: mongo
-        restart: always
-        
-        ports:
-          - 27017:27017
-    mongo-express:
-        image: mongo-express
-        restart: always
-        ports:
-          - 8081:8081
-        
-        depends_on:
-          - mongo
-    tweetapp-server:
+
+  mongo:
+    container_name: mongo
+    image: mongo
+    restart: always
+    volumes:
+      - ${WEBAPP_STORAGE_HOME}/site:/data/db
+      #- ./data:/data/db
+    ports:
+      - "27017:27017"
+
+  web:
         build: .
-        restart: always
         ports:
-          - 8000:80
-        environment:
-          MongoDB__Host: mongo
+            - "8000:80"
+            - "44348:443"
         depends_on:
+            - mongo
+        volumes:
+            - ${HOME}/.microsoft/usersecrets/:/root/.microsoft/usersecrets
+            - ${HOME}/.aspnet/https:/root/.aspnet/https/
+        links:
           - mongo
