--- a/TweetApp/appsettings.json
+++ b/TweetApp/appsettings.json
@@ -11,7 +11,7 @@
     "UsersCollectionName": "Users",
     "TweetsCollectionName": "tweets",
     "LikesCollectionName": "Likes",
-    "ConnectionString": "mongodb://mongo:27017",
+    "ConnectionString": "mongodb+srv://akundu:arijit802330@tweetappcluster.3mxm9.mongodb.net/tweetApp?retryWrites=true&w=majority",
     "DatabaseName": "tweetapp"
   }
 }
